Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1414

Error in length computing in util/url.c

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.7.0
    • util
    • None

    Description

      A C string ends with 0 so length computing are erroneous in util/url.c for functions axutil_url_set_host and axutil_url_get_server : we need to allocate 1 more byte.

      Attachments

        Activity

          People

            Unassigned Unassigned
            mireaux Francois Mireaux
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: