AXIS2C-1414 Error in length computing in util/url.c